# setlist-planner

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: build_chroma_from_csv.py  onsong_batch_import.py  setup_macos.sh
src/setlistgraph/agents/: agentic.py  agentic_graph.py  graph.py  tools.py
src/setlistgraph/data/: song_catalog.sample.csv
src/setlistgraph/io/: loaders.py  onsong_batch.py  onsong_loader.py  onsong_pdf_loader.py
src/setlistgraph/pipelines/: embed_catalog.py
src/setlistgraph/retrievers/: semantic.py  songs.py  vdb.py
src/setlistgraph/scoring/: compatibility.py
src/setlistgraph/ui/: agent_console.py  app.py  onsong_batch_snippet.py  onsong_import_snippet.py
tests/: conftest.py  test_agentic.py  test_catalog_schema.py  test_graph.py  test_loader.py  test_retriever.py  test_vdb.py  test_vdb_edge.py
